<resources>
    <string name="app_name">NoteFeed</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="enterusername">Enter username here</string>
    <string name="password">Password:</string>
    <string name="enterpassword">Enter password here</string>
    <string name="mainIcon">This is the mainIcon</string>
    <string name="moto">This is the moto of our app</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="userpassEmpty">Please Enter A Valid Username And Password</string>
    <string name="userauthError">Failure in authenticating user</string>
    <string name="title_activity_nffeed">Main</string>
    <string name="title_activity_nfsign_up">NFSignUp</string>
    <string name="upError">User-Password Error</string>
    <string name="placeholder">This is a placeholder</string>
    <string name="openDrawer">Drawer Opened</string>
    <string name="closeDrawer">Drawer Closed</string>
    <string name="search">Search</string>
    <string name="add_item">Add Item</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Search Results</string>
    <string name="resultsCursor">Results Cursors</string>
    <string name="next">Next</string>
    <string name="email">E-mail:</string>
    <string name="enteremail">Enter e-mail here</string>
    <string name="finish">Finish</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="confirmspassword">Confirm Password Here</string>
    <string name="upvote">UPVOTE</string>
    <string name="downvote">DOWNVOTE</string>
    <string name="reply">REPLY</string>
    <string name="button_send">Send</string>
    <string name="edit_message2">Edit</string>
    <string name="add">Add</string>
</resources>
