<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.abdulmuhsinse.notefeed.NFSignUp"
    android:background="@color/primary"
    android:theme="@style/AppTheme.NoActionBar">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/step1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/signUpUser"
            android:textSize="24sp"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:padding="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signUpUser"
            android:id="@+id/signuser"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/enterusername"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpUser"
            card_view:cardBackgroundColor="#ffd9d9d9"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="6dp"
            card_view:cardElevation="6dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:id="@+id/toEmailEntryButton"
            android:minWidth="140dp"
            android:height="36dp">

            <TextView android:id="@+id/toEmailEntryText"
                android:paddingTop="8.5dp"
                android:paddingBottom="8.5dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#de000000"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </android.support.v7.widget.CardView>

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/step2"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/signUpEmail"
            android:textSize="24sp"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:padding="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signUpEmail"
            android:id="@+id/signemail"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:hint="@string/enteremail"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpEmail"
            card_view:cardBackgroundColor="#ffd9d9d9"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="6dp"
            card_view:cardElevation="6dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:id="@+id/toPasswordButton"
            android:minWidth="140dp"
            android:height="36dp">

            <TextView android:id="@+id/toPasswordText"
                android:paddingTop="8.5dp"
                android:paddingBottom="8.5dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#de000000"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/step3"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/signUpPass"
            android:textSize="24sp"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:padding="10dp"
            android:gravity="left"
            android:paddingEnd="20dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signUpPass"
            android:id="@+id/signpass"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:hint="@string/enterpassword"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginLeft="20dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpPass"
            android:id="@+id/thisLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmpassword"
            android:id="@+id/signUpConfirmPass"
            android:textSize="18sp"

            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:padding="5dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signUpConfirmPass"
            android:singleLine="true"
            android:id="@+id/signpass2"

            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:hint="@string/confirmspassword"
            android:textColor="@color/white"
            android:padding="5dp"/>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thisLayout"
            card_view:cardBackgroundColor="#ffd9d9d9"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="6dp"
            card_view:cardElevation="6dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:id="@+id/toFinishButton"
            android:minWidth="140dp"
            android:height="36dp">

            <TextView android:id="@+id/toFinishText"
                android:paddingTop="8.5dp"
                android:paddingBottom="8.5dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#de000000"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
