<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NFLogin"
    android:background="@color/primary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/mainLoginSection">

        <ImageView
            android:id="@+id/mainIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"


            android:contentDescription="@string/mainIcon"
            />
        <!--<TextView
            android:id="@+id/moto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainIcon"
            android:layout_centerHorizontal="true"
            android:text="@string/moto"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="14sp"
            />-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/mainIcon"
            android:id="@+id/userpass"
            android:paddingTop="0dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:id="@+id/usernameTextLogin"
                    android:textColor="#FFFFFF"
                    />
                <EditText
                    android:id="@+id/usernameLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:hint="@string/enterusername"
                    android:textSize="14sp"
                    android:minWidth="140dp"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/passwordTextLogin"
                    android:textColor="#FFFFFF"
                    />
                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterpassword"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:minWidth="140dp"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>


        </LinearLayout>
        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userpass"
            android:minWidth="88dp"
            android:height="36dp"
            android:layout_centerHorizontal="true"
            /> -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/userpass">
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#ffd9d9d9"
                card_view:cardCornerRadius="2dp"
                android:layout_margin="6dp"
                card_view:cardElevation="6dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:onClick="signIn"
                android:id="@+id/signinButton"
                android:minWidth="140dp"
                android:height="36dp">

                <TextView android:id="@+id/signintext"
                    android:paddingTop="8.5dp"
                    android:paddingBottom="8.5dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="#de000000"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#ffd9d9d9"
                card_view:cardCornerRadius="2dp"
                android:layout_margin="6dp"
                card_view:cardElevation="6dp"
                android:layout_below="@id/signinButton"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:onClick="signUp"
                android:id="@+id/signupButton"
                android:minWidth="140dp"
                android:height="36dp">

                <TextView android:id="@+id/signuptext"
                    android:paddingTop="8.5dp"
                    android:paddingBottom="8.5dp"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:textColor="#de000000"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
